# sfml-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
01/: CMakeLists.txt  README.md  main.cpp
02/: CMakeLists.txt  README.md  main.cpp
03/: CMakeLists.txt  README.md  main.cpp
04/: CMakeLists.txt  README.md  main.cpp
05/: CMakeLists.txt  README.md  main.cpp
06/: CMakeLists.txt  README.md  main.cpp
07/: CMakeLists.txt  README.md  main.cpp
08/: CMakeLists.txt  README.md  RussianFlag.cpp  RussianFlag.h  main.cpp
09/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  HeroPuppeteer.cpp  HeroPuppeteer.h  README.md  main.cpp
res/09/: man_hero.atlas
